--- a/Trabalho_2_Iago_Magalhaes.ipynb
+++ b/Trabalho_2_Iago_Magalhaes.ipynb
@@ -4,16 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "rrd3nTrh1gBf",
-        "yqabUW2P1RZ1",
-        "q7VTAvB_1UEo",
-        "Eeq_dUZr1X24",
-        "PFwz2fIa1eaI",
-        "Ef3Vr6PRsRfv",
-        "JQeUiv60sTa1"
-      ],
-      "authorship_tag": "ABX9TyNylUpJOCQaxlMqZyDZKREi",
+      "authorship_tag": "ABX9TyPHL8FMB9tqKaw/2a1WrgfA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "pNYuNq9ntnUc"
       },
@@ -97,7 +88,7 @@
         "id": "rQR84kZw1T0P",
         "outputId": "4c20fb10-42d8-4228-fcc0-7f8da7b0d517"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -143,7 +134,7 @@
       "metadata": {
         "id": "PpOhoIcs1XgN"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +170,7 @@
       "metadata": {
         "id": "76t95U8b1a9k"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -206,7 +197,7 @@
       "metadata": {
         "id": "BMQCYaSb1eCP"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -216,8 +207,8 @@
         "  '''\n",
         "    Função para aplicação da limiarização local\n",
         "    :param image: recebe um image array\n",
-        "    :param threshold: recebe um valor inteiro para aplicação da limiarização global\n",
-        "    :return: retorna uma imagem com a aplicação da limiarização global\n",
+        "    :param window_size: recebe um valor inteiro para aplicação da limiarização local em uma janela\n",
+        "    :return: retorna uma imagem com a aplicação da limiarização local\n",
         "  '''\n",
         "  w, h = image.shape\n",
         "\n",
@@ -243,7 +234,7 @@
       "metadata": {
         "id": "ZGbqA6rPqmMk"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +276,7 @@
       "metadata": {
         "id": "h5ptmEDW1iN2"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,7 +310,7 @@
       "metadata": {
         "id": "fiRw70tQykm3"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +355,7 @@
         },
         "outputId": "bfc25c66-7fed-4ad2-a0ef-71b1602a7dee"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -411,7 +402,7 @@
         "id": "coGFzZpYyxrI",
         "outputId": "e4759b1c-3151-40ee-cec4-ef1bececcd05"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -458,7 +449,7 @@
         "id": "6drX96NJze4H",
         "outputId": "9371677b-b40b-427c-93ab-eef69b058963"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -505,7 +496,7 @@
         "id": "f7B7wexjzgtb",
         "outputId": "41fdfc48-9916-4a3a-8ace-b273d75e1d62"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
